@@ -7,6 +7,7 @@ $Id$
 	- Fixed Hitachi 7K1000 (#883)
 	- Added Seagate Barracuda 2.5 5400 series (#882)
 	- Added Toshiba P300 series (#881)
+	- Added SK hynix SSD SC300 series (#699)
 
 2017-09-20  Alex Samorukov  <samm@os2.kiev.ua>
 
